--- a/src/hx/libs/asys/libuv/Build.xml
+++ b/src/hx/libs/asys/libuv/Build.xml
@@ -158,8 +158,8 @@
         <file name='${this_dir}/stream/StreamWriter.cpp'/>
         <file name='${this_dir}/stream/StreamReader.cpp'/>-->
         <file name='${this_dir}/filesystem/LibuvFile.cpp'/>
-        <!--<file name='${this_dir}/filesystem/LibuvDirectory.cpp'/>
-        <file name='${this_dir}/system/LibuvProcess.cpp'/>
+        <file name='${this_dir}/filesystem/LibuvDirectory.cpp'/>
+        <!--<file name='${this_dir}/system/LibuvProcess.cpp'/>
         <file name='${this_dir}/system/LibuvChildProcess.cpp'/>
         <file name='${this_dir}/system/LibuvCurrentProcess.cpp'/>-->
     </files>
