--- a/src/hx/libs/asys/libuv/Build.xml
+++ b/src/hx/libs/asys/libuv/Build.xml
@@ -149,9 +149,10 @@
         <file name='${this_dir}/BaseData.cpp'/>
         <file name='${this_dir}/LibuvAsysContext.cpp'/>
         <file name='${this_dir}/LibuvUtils.cpp'/>
-        <!--<file name='${this_dir}/net/LibuvDns.cpp'/>
+        <file name='${this_dir}/net/LibuvDns.cpp'/>
         <file name='${this_dir}/net/LibuvIp.cpp'/>
-        <file name='${this_dir}/net/LibuvTcpSocket.cpp'/>
+        <file name='${this_dir}/net/NetUtils.cpp'/>
+      <!--<file name='${this_dir}/net/LibuvTcpSocket.cpp'/>
         <file name='${this_dir}/net/LibuvTcpServer.cpp'/>
         <file name='${this_dir}/net/LibuvIpcSocket.cpp'/>
         <file name='${this_dir}/net/NetUtils.cpp'/>
