--- a/src/hx/libs/asys/libuv/Build.xml
+++ b/src/hx/libs/asys/libuv/Build.xml
@@ -153,9 +153,9 @@
         <file name='${this_dir}/net/LibuvIp.cpp'/>
         <file name='${this_dir}/net/NetUtils.cpp'/>
         <file name='${this_dir}/net/LibuvTcpSocket.cpp'/>
-      <!--<file name='${this_dir}/net/LibuvTcpServer.cpp'/>
-        <file name='${this_dir}/net/LibuvIpcSocket.cpp'/>
-        <file name='${this_dir}/net/NetUtils.cpp'/>-->
+        <file name='${this_dir}/net/LibuvTcpServer.cpp'/>
+      <!--
+        <file name='${this_dir}/net/LibuvIpcSocket.cpp'/>-->
         <file name='${this_dir}/stream/StreamReader.cpp'/>
         <file name='${this_dir}/stream/StreamWriter.cpp'/>
         <file name='${this_dir}/filesystem/LibuvFile.cpp'/>
